--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,11 @@
 {
   "env": {
     "browser": true,
-    "commonjs": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": ["prettier"],
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "rules": {
-    "indent": ["error", "tab"],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"],
-    "prettier/prettier": "error"
-  }
+  "rules": {}
 }
