--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "dev": "http-server",
-    "lint": "eslint *.js"
+    "lint": "eslint .",
+    "lint/fix": "eslint . --fix"
   }
 }
